syntax = "proto3";

option go_package = "./;proto";

package proto;

service SumConcat {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc Concat(ConcatRequest) returns (ConcatResponse);
}

message SumRequest {
  int64 a = 1;
  int64 b = 2;
}

message SumResponse {
  int64 reply = 1;
}

message ConcatRequest {
  string a = 1;
  string b = 2;
}

message ConcatResponse {
  string reply = 1;
}